# Diploma

./: README.md
Check_Base/: gen.cpp  start.sh
Structurizr/: workspace.dsl  workspace.dsl.txt
Structurizr/version 2/: workspace.dsl  workspace.dsl.txt
TraTraCoS/: CMakeLists.txt  Dockerfile  docker-compose.yml  gen.cpp  info.txt  info1.txt  info2.txt  main.cpp  output.txt  structs_and_consts.h
ВКР/: ВКР Почечура.docx  Задание ВКР.docx
Визуализация БД/: Код для БД.txt
Выступление/: Записка.docx  Презентация ВКР Почечура.pptx
Схема соединения/: Схема соединения.vsdx
Тестирование/: Отрисовка графика времени.txt  Отрисовка графиков потери и граничного значения.txt
Тестирование/Тестирование на граничное значение метрики/: gen.cpp  main.cpp  main.cpp.txt  structs_and_consts.h  structs_and_consts.txt
Тестирование/Тестирование на потерю CDR/: gen.cpp  gen.cpp.txt  main.cpp  main.cpp.txt  structs_and_consts.h  structs_and_consts.h.txt
Тестирование/Тестирование по времени/: gen.cpp.txt  main.cpp  main.cpp.txt  structs_and_consts.h  structs_and_consts.h.txt
Устройство сети/: Устройство сети.vsdx
